--- a/index.scss
+++ b/index.scss
@@ -2,11 +2,13 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    list-style: none;
+    font-family: 'Poppins', sans-serif;
 }
 
 .nav-hidden {
-    top: -80px;
-    transition: 0.2s;
+    opacity: 0;
+    transition: opacity 0.3s ease-in-out;
 }
 
 .nav {
