--- a/style.css
+++ b/style.css
@@ -2,6 +2,13 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  list-style: none;
+  font-family: "Poppins", sans-serif;
+}
+
+.nav-hidden {
+  opacity: 0;
+  transition: opacity 0.3s ease-in-out;
 }
 
 .nav ul {
@@ -11,10 +18,6 @@
 }
 .nav ul li {
   text-decoration: none;
-}
-.nav-hidden {
-  transform: translateY(-100%);
-  transition: transform 0.3s ease-out;
 }
 
 /*# sourceMappingURL=style.css.map */
