--- a/index.scss
+++ b/index.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap');
+
 * {
     margin: 0;
     padding: 0;
@@ -22,4 +24,7 @@
             text-decoration: none;
         }
     }
+}
+#panier {
+    padding-top: 20px;
 }
