--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap");
 * {
   margin: 0;
   padding: 0;
@@ -18,6 +19,10 @@
 }
 .nav ul li {
   text-decoration: none;
+}
+
+#panier {
+  padding-top: 20px;
 }
 
 /*# sourceMappingURL=style.css.map */
