:fire: optimisation de l'espace + fix bugs panier

--- a/index.scss
+++ b/index.scss
@@ -25,6 +25,29 @@
         }
     }
 }
+
 #panier {
     padding-top: 20px;
+}
+.panier-items {
+    display: flex;
+    justify-content: space-between;
+}
+.panier-item {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+
+    &-choice {
+        display: flex;
+        gap: 5px;
+
+        &-add {
+            cursor: pointer;
+        }
+
+        &-remove {
+            cursor: pointer;
+        }
+    }
 }
