--- a/index.scss
+++ b/index.scss
@@ -28,6 +28,15 @@
         padding: 16px 112px;
         width: 100%;
 
+        @media (max-width: 1100px) {
+            padding: 16px 80px;
+            
+        }
+
+        @media (max-width: 550px) {
+            padding: 16px 40px;
+        }
+
         &-container {
             display: flex;
             align-items: center;
@@ -37,6 +46,11 @@
                 display: flex;
                 gap: 24px;
                 padding-top: 12px;
+
+                @media (max-width: 850px) {
+                    display: none;
+                    
+                }
 
                 li {
                     
@@ -65,6 +79,11 @@
                 gap: 5px;
                 text-decoration: none;
                 color: #111827;
+
+                @media (max-width: 460px) {
+                    display: none;
+                    
+                }
             }
 
             &-panier {
@@ -72,6 +91,11 @@
                 background-color: #111827;
                 color:  white;
                 align-items: center;
+
+                @media (max-width: 460px) {
+                    display: flex;
+                    
+                }
             }
         }
     }
@@ -79,6 +103,19 @@
 
 main {
     padding-inline: 112px;
+
+    @media (max-width: 1100px) {
+        padding-inline: 80px;
+    }
+
+    @media (max-width: 550px) {
+        padding-inline: 40px;
+        
+    }
+
+    @media (max-width: 350px) {
+        padding-inline: 20px;
+    }
 }
 
 .header {
@@ -86,14 +123,48 @@ main {
         display: flex;
         justify-content: space-between;
 
+        @media (max-width: 1000px) {
+            flex-direction: column;
+            align-items: center;
+            
+        }
+
         &-container {
             width: 34%;
+
+            @media (max-width: 1000px) {
+                width: 100%;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                padding-bottom: 40px;      
+            }
     
             &-slogan {
                 padding-bottom: 15px;
                 
                 &-title {
                     font-size: 60px;
+
+                    @media (max-width: 1000px) {
+                        text-align: center;
+                    }
+
+                    @media (max-width: 550px) {
+                        font-size: 40px;
+                    }
+
+                    @media (max-width: 350px) {
+                        font-size: 30px;
+                    }
+                }
+                
+                &-paragraph {
+                    color: #6D7280;
+
+                    @media (max-width: 1000px) {
+                        text-align: center;
+                    }
                 }
             }
         
@@ -110,6 +181,24 @@ main {
             position: absolute;
             right: 0;
             top: 28%;
+
+            @media (max-width: 1700px) {
+                top: 35%;
+            }
+
+            @media (max-width: 1500px) {
+                width: 55%;
+                
+            }
+
+            @media (max-width: 1300px) {
+                width: 60%;
+            }
+
+            @media (max-width: 1000px) {
+                position: relative;
+                width: 80%;
+            }
         }
     }
     
@@ -124,22 +213,60 @@ main {
         width: 100%;
         padding-bottom: 80px;
 
+        @media (max-width: 1000px) {
+            padding-bottom: 40px;
+            
+        }
+
+        @media (max-width: 860px) {
+            padding-bottom: 20px;
+            
+        }
+
         &-title {
             font-size: 60px;
             font-weight: 700;
             text-align: center;
             width: 35%;
+
+            @media (max-width: 1450px) {
+                width: 100%;  
+            }
+
+            @media (max-width: 550px) {
+                font-size: 40px;
+                
+            }
         }
     
         &-paragraph {
             text-align: center;
             color: #6D7280;
             width: 30%;
+
+            @media (max-width: 1450px) {
+                width: 50%;  
+            }
+
+            @media (max-width: 1000px) {
+                width: 100%;  
+            }
+
         }
     }
 
     &-container {
         display: flex;
+        
+        @media (max-width: 1000px) {
+            flex-direction: column;
+            align-items: center;
+        }
+
+        @media (max-width: 700px) {
+            gap: 40px;
+            
+        }
 
         &-item {
             width: 50%;
@@ -147,16 +274,60 @@ main {
             flex-direction: column;
             align-items: center;
 
+            @media (max-width: 1000px) {
+                width: 100%;
+            }
+            @media (max-width: 700px) {
+                width: 100%;
+                gap: 20px;
+                
+            }
+
+
             &-image {
-                height: 100%;
+                height: auto;
                 padding-bottom: 30px;
+                height: 400px;
+
+                @media (max-width: 1000px) { 
+                    height: 300px;
+                    padding-bottom: 0px;
+                }
+
+                @media (max-width: 750px) { 
+                    height: 250px;
+                    
+                }
+
+                @media (max-width: 700px) { 
+                    height: 200px;
+                }
+            
+                @media (max-width: 580px) { 
+                    height: 150px;
+                }
+
+                @media (max-width: 400px) { 
+                    display: none;
+                }
             }
 
             &-text {
                 display: flex;
                 flex-direction: column;
                 align-items: center;
-                width: 70%;
+                width: 90%;
+
+                @media (max-width: 1000px) {
+                    align-items: flex-start;
+                    
+                }
+
+                @media (max-width: 400px) {
+                    width: 100%;
+                    align-items: center;
+                    
+                }
 
                 &-title {
                     font-size: 30px;
@@ -166,7 +337,41 @@ main {
                 &-paragraph {
                     text-align: center;
                     color: #6D7280;
+
+                    @media (max-width: 1000px) {
+                        text-align: left;
+                    }
+
+                    @media (max-width: 400px) {
+                        text-align: center;
+                    }
                 }
+            }
+        }
+
+        &-item:nth-child(1){
+            @media (max-width: 1000px) {
+                flex-direction: row;
+                align-items: center;
+                gap: 10px;
+            }
+
+            @media (max-width: 400px) {
+                flex-direction: column;
+                gap: 10px;
+            }
+        }
+
+        &-item:nth-child(2){
+            @media (max-width: 1000px) {
+                flex-direction: row-reverse;
+                align-items: center;
+                gap: 10px;
+            }
+
+            @media (max-width: 400px) {
+                flex-direction: column;
+                gap: 10px;
             }
         }
     }
@@ -179,19 +384,39 @@ main {
         align-items: center;
         justify-content: space-between;
 
+        @media (max-width: 900px) {
+            flex-direction: column;
+        }
+
         &-text {
             display: flex;
             flex-direction: column;
             width: 40%;
             gap: 16px;
+
+            @media (max-width: 1200px) {
+                width: 100%;
+            }
+
+            @media (max-width: 900px) {
+                align-items: center;
+            }
     
             &-title {
                 font-size: 60px;
                 font-weight: 700;
+
+                @media (max-width: 550px) {
+                    font-size: 40px;
+                }
             }
     
             &-paragraph {
                 color: #6D7280;
+
+                @media (max-width: 900px) {
+                    text-align: center;
+                }
             }
     
             &-button {
@@ -203,6 +428,14 @@ main {
         &-image {
             width: 50%;
             height: auto;
+
+            @media (max-width: 900px) {
+                width: 90%;
+            }
+
+            @media (max-width: 420px) {
+                display: none;  
+            }
         }
     }
 
