--- a/index.scss
+++ b/index.scss
@@ -76,6 +76,7 @@
                 font-weight: 700;
                 cursor: pointer;
                 display: flex;
+                align-items: center;
                 gap: 5px;
                 text-decoration: none;
                 color: #111827;
@@ -483,14 +484,98 @@ main {
 
 #panier {
     padding-top: 100px;
+
+    .panier-title {
+        font-size: 40px;
+
+        @media (max-width: 900px) {
+            text-align: center;
+        }
+
+        @media (max-width: 500px) {
+            font-size: 30px;
+        }
+    }
 }
 
 .panier-items {
     display: flex;
     justify-content: space-between;
+    
+
+    @media (max-width: 900px) {
+        flex-direction: column;
+        align-items: center;
+        gap: 40px;
+    }
 
     &-preview {
-        width: 20%;
+        width: 30%;
+
+        @media (max-width: 900px) {
+            width: 100%;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+
+
+    }
+
+    &-bill {
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+        font-size: 20px;
+
+        @media (max-width: 900px) {
+            width: 90%;
+            align-items: center;
+        }
+
+        @media (max-width: 500px) {
+            width: 100%;
+        }
+
+        &-title {
+
+            @media (max-width: 900px) {
+                font-size: 40px;
+                text-align: center;
+            }
+
+            @media (max-width: 500px) {
+                font-size: 25px;
+            }
+        }
+
+        &-container {
+            display: flex;
+            flex-direction: column;
+            gap: 40px;
+            font-size: 20px;
+            width: 90%;
+
+            &-price {
+                display: flex;
+                justify-content: space-between;
+            }
+    
+            &-taxe {
+                @extend .panier-items-bill-container-price;
+            }
+    
+            &-total {
+                @extend .panier-items-bill-container-price;
+                font-weight: 700;
+            }
+        }
+
+        &-button {
+            @extend .nav-menu-buttons-panier;
+            width: fit-content;
+        }
+
     }
 }
 
@@ -498,23 +583,76 @@ main {
     display: flex;
     align-items: center;
     gap: 10px;
+    width: 450px;
+
+    @media (max-width: 1000px) {
+        width: 350px;
+    }
+
+    @media (max-width: 900px) {
+        width: 90%;
+    }
+
+    @media (max-width: 500px) {
+        width: 100%;
+    }
+
+    @media (max-width: 450px) {
+        display: flex;
+        justify-content: space-between;
+    }
 
     &-container {
         display: flex;
         width: 100%;
         justify-content: space-between;
 
+        @media (max-width: 450px) {
+            width: 40%;
+            flex-direction: column;
+            align-items: flex-start;
+            gap: 10px;
+        }
+
+        @media (max-width: 400px) {
+            width: 50%;
+        }
+
+        @media (max-width: 300px) {
+            width: 100%;
+        }
+
+        &-info {
+            width: fit-content;
+
+            &-text {
+                font-size: 18px;
+            }
+
+            &-price {
+                color: #6D7280;
+            }
+        }
+
         &-choice {
             display: flex;
-            width: 20%;
             justify-content: space-between;
+            align-items: center;
+            gap: 10px;
 
             &-add {
+                @extend .nav-menu-buttons-catalogue;
                 cursor: pointer;
+                font-size: 20px;
+
+                @media (max-width: 460px) {
+                    display: flex;
+                }
             }
 
             &-remove {
-                cursor: pointer;
+                @extend .nav-menu-buttons-panier;
+                @extend .panier-item-container-choice-add;
             }
         }
     }
