--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@
   display: flex;
   gap: 12px;
 }
-.nav-menu-buttons-catalogue, #produits .produit-buy, .about-container-text-button, .nav-menu-buttons-panier, .header-hero-container-button {
+.nav-menu-buttons-catalogue, .panier-item-container-choice-add, .panier-item-container-choice-remove, #produits .produit-buy, .about-container-text-button, .nav-menu-buttons-panier, .panier-items-bill-button, .header-hero-container-button {
   background-color: transparent;
   outline: none;
   border: 1px solid #111827;
@@ -70,22 +70,23 @@
   font-weight: 700;
   cursor: pointer;
   display: flex;
+  align-items: center;
   gap: 5px;
   text-decoration: none;
   color: #111827;
 }
 @media (max-width: 460px) {
-  .nav-menu-buttons-catalogue, #produits .produit-buy, .about-container-text-button, .nav-menu-buttons-panier, .header-hero-container-button {
+  .nav-menu-buttons-catalogue, .panier-item-container-choice-add, .panier-item-container-choice-remove, #produits .produit-buy, .about-container-text-button, .nav-menu-buttons-panier, .panier-items-bill-button, .header-hero-container-button {
     display: none;
   }
 }
-.nav-menu-buttons-panier, .header-hero-container-button {
+.nav-menu-buttons-panier, .panier-item-container-choice-remove, .panier-items-bill-button, .header-hero-container-button {
   background-color: #111827;
   color: white;
   align-items: center;
 }
 @media (max-width: 460px) {
-  .nav-menu-buttons-panier, .header-hero-container-button {
+  .nav-menu-buttons-panier, .panier-item-container-choice-remove, .panier-items-bill-button, .header-hero-container-button {
     display: flex;
   }
 }
@@ -460,35 +461,161 @@ main {
 #panier {
   padding-top: 100px;
 }
+#panier .panier-title {
+  font-size: 40px;
+}
+@media (max-width: 900px) {
+  #panier .panier-title {
+    text-align: center;
+  }
+}
+@media (max-width: 500px) {
+  #panier .panier-title {
+    font-size: 30px;
+  }
+}
 
 .panier-items {
   display: flex;
   justify-content: space-between;
 }
+@media (max-width: 900px) {
+  .panier-items {
+    flex-direction: column;
+    align-items: center;
+    gap: 40px;
+  }
+}
 .panier-items-preview {
-  width: 20%;
+  width: 30%;
+}
+@media (max-width: 900px) {
+  .panier-items-preview {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+}
+.panier-items-bill {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  font-size: 20px;
+}
+@media (max-width: 900px) {
+  .panier-items-bill {
+    width: 90%;
+    align-items: center;
+  }
+}
+@media (max-width: 500px) {
+  .panier-items-bill {
+    width: 100%;
+  }
+}
+@media (max-width: 900px) {
+  .panier-items-bill-title {
+    font-size: 40px;
+    text-align: center;
+  }
+}
+@media (max-width: 500px) {
+  .panier-items-bill-title {
+    font-size: 25px;
+  }
+}
+.panier-items-bill-container {
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+  font-size: 20px;
+  width: 90%;
+}
+.panier-items-bill-container-price, .panier-items-bill-container-total, .panier-items-bill-container-taxe {
+  display: flex;
+  justify-content: space-between;
+}
+.panier-items-bill-container-total {
+  font-weight: 700;
+}
+.panier-items-bill-button {
+  width: fit-content;
 }
 
 .panier-item {
   display: flex;
   align-items: center;
   gap: 10px;
+  width: 450px;
+}
+@media (max-width: 1000px) {
+  .panier-item {
+    width: 350px;
+  }
+}
+@media (max-width: 900px) {
+  .panier-item {
+    width: 90%;
+  }
+}
+@media (max-width: 500px) {
+  .panier-item {
+    width: 100%;
+  }
+}
+@media (max-width: 450px) {
+  .panier-item {
+    display: flex;
+    justify-content: space-between;
+  }
 }
 .panier-item-container {
   display: flex;
   width: 100%;
   justify-content: space-between;
 }
+@media (max-width: 450px) {
+  .panier-item-container {
+    width: 40%;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 10px;
+  }
+}
+@media (max-width: 400px) {
+  .panier-item-container {
+    width: 50%;
+  }
+}
+@media (max-width: 300px) {
+  .panier-item-container {
+    width: 100%;
+  }
+}
+.panier-item-container-info {
+  width: fit-content;
+}
+.panier-item-container-info-text {
+  font-size: 18px;
+}
+.panier-item-container-info-price {
+  color: #6D7280;
+}
 .panier-item-container-choice {
   display: flex;
-  width: 20%;
   justify-content: space-between;
+  align-items: center;
+  gap: 10px;
 }
-.panier-item-container-choice-add {
+.panier-item-container-choice-add, .panier-item-container-choice-remove {
   cursor: pointer;
+  font-size: 20px;
 }
-.panier-item-container-choice-remove {
-  cursor: pointer;
+@media (max-width: 460px) {
+  .panier-item-container-choice-add, .panier-item-container-choice-remove {
+    display: flex;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
